<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_notes"
            android:title="@string/nav_drawer_notes"
            android:icon="@drawable/ic_action_notes"
            android:checked="true">
        </item>

        <item
            android:id="@+id/drawer_statistics"
            android:title="@string/nav_drawer_statistics"
            android:icon="@drawable/ic_stats">
        </item>

    </group>

    <group
        android:id="@+id/group_exit"
        android:checkableBehavior="single">
        <item
            android:id = "@+id/drawer_exit"
            android:title="@string/nav_drawer_exit"
            android:icon="@drawable/ic_exit"
            android:checkable="false">
        </item>
    </group>
</menu>